property is end bro
