# src/api/api.go
@@ -26,7 +26,7 @@ func InitServer(cfg *config.Config) {
 	r.Use(
 		gin.Logger(),
 		gin.RecoveryWithWriter(gin.DefaultWriter, func(c *gin.Context, err interface{}) {
-			middlewares.ErrorHandler(c, err)//خط بیست و هشت و بیست و نه جدید اضافه شده اند
+			middlewares.ErrorHandler(c, err) //خط بیست و هشت و بیست و نه جدید اضافه شده اند
 		}),
 		middlewares.LimitByRequest(),
 	)
@@ -42,69 +42,63 @@ func InitServer(cfg *config.Config) {
 
 	api := r.Group("/api")
 	v1 := api.Group("/v1")
-	{   //Test
+	{ //Test
 		heath := v1.Group("/health")
 		test_router := v1.Group("/test")
 
-
-        //User
+		//User
 		users := v1.Group("/users")
 
-		
 		//Base
-		Countries :=v1.Group("/countries",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		Cities :=v1.Group("/Cities",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		files :=v1.Group("/files",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		companies := v1.Group("/companies",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		colors := v1.Group("/colors",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        Years := v1.Group("/years",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
+		Countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		Cities := v1.Group("/Cities", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		files := v1.Group("/files", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		companies := v1.Group("/companies", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		colors := v1.Group("/colors", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		Years := v1.Group("/years", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 
-
-        //property
-		properties :=v1.Group("/properties",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		propertyCategories :=v1.Group("/property-categories",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        //Car
-		carTypes := v1.Group("/car-types",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-		gearboxes := v1.Group("/gearboxes",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        carModels := v1.Group("/car-models",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        carModelColors := v1.Group("/car-model-colors",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        carModelYears := v1.Group("/car-model-years",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        carModelPriceHistories := v1.Group("/car-model-price-histories",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-        carModelImage := v1.Group("/car-model-images",middlewares.Authentication(cfg),middlewares.Authorization([]string{"admin"}))
-
-
-        //Test
+		//property
+		properties := v1.Group("/properties", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		propertyCategories := v1.Group("/property-categories", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		//Car
+		carTypes := v1.Group("/car-types", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		gearboxes := v1.Group("/gearboxes", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModels := v1.Group("/car-models", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModelColors := v1.Group("/car-model-colors", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModelYears := v1.Group("/car-model-years", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModelPriceHistories := v1.Group("/car-model-price-histories", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModelImage := v1.Group("/car-model-images", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+        carModelProperties := v1.Group("/car-model-properties", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		//Test
 		routers.Health(heath)
 		routers.TestRouter(test_router)
 
-
-        //User
+		//User
 		routers.User(users, cfg)
 
-
-        //Base
+		//Base
 		routers.Country(Countries, cfg)
-		routers.City(Cities , cfg)
-		routers.File(files,cfg)
-		routers.Company(companies,cfg)
-		routers.Color(colors,cfg)
-		routers.Year(Years,cfg)
-
+		routers.City(Cities, cfg)
+		routers.File(files, cfg)
+		routers.Company(companies, cfg)
+		routers.Color(colors, cfg)
+		routers.Year(Years, cfg)
 
 		//property
-		routers.Property(properties,cfg)
-		routers.PropertyCategory(propertyCategories,cfg)
+		routers.Property(properties, cfg)
+		routers.PropertyCategory(propertyCategories, cfg)
 
 		//Car
-		routers.CarType(carTypes,cfg)
-		routers.Gearbox(gearboxes,cfg)
-		routers.CarModel(carModels,cfg)
-		routers.CarModelColor(carModelColors,cfg)
-		routers.CarModelYear(carModelYears,cfg)
-		routers.CarModelPriceHistory(carModelPriceHistories,cfg)
-        routers.CarModelImage(carModelImage,cfg)
+		routers.CarType(carTypes, cfg)
+		routers.Gearbox(gearboxes, cfg)
+		routers.CarModel(carModels, cfg)
+		routers.CarModelColor(carModelColors, cfg)
+		routers.CarModelYear(carModelYears, cfg)
+		routers.CarModelPriceHistory(carModelPriceHistories, cfg)
+		routers.CarModelImage(carModelImage, cfg)
+		routers.CarModelProperty(carModelProperties,cfg)
 
-		r.Static("/static" , "./uploads")
+		r.Static("/static", "./uploads")
 	}
 
 	log.Println("InitServer - API groups registered.")
