# src/api/handlers/car_model_propertise.go
@@ -1,0 +1,100 @@
+package handlers
+
+import (
+	"GOLANG_CLEAN_WEB_API/src/config"
+	"GOLANG_CLEAN_WEB_API/src/services"
+
+	"github.com/gin-gonic/gin"
+)
+
+type CarModelPropertyHandler struct {
+	service *services.CarModelPropertyService
+}
+
+func NewCarModelPropertyHandler(cfg *config.Config) *CarModelPropertyHandler {
+	return &CarModelPropertyHandler{
+		service: services.NewCarModelPropertyService(cfg),
+	}
+}
+
+// CreateCarModelProperty godoc
+// @Summary Create a CarModelProperty
+// @Description Create a CarModelProperty
+// @Tags CarModelProperties
+// @Accept json
+// @Produce json
+// @Param Request body dto.CreateCarModelPropertyRequest true "Create a CarModelProperty"
+// @Success 201 {object} dto.CarModelPropertyResponse "CarModelProperty response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-properties/ [post]
+// @Security AuthBearer
+func (h *CarModelPropertyHandler) Create(c *gin.Context) {
+	Create(c, h.service.Create)
+}
+
+//Update
+
+// UpdateCarModelProperty godoc
+// @Summary Update a CarModelProperty
+// @Description Update a CarModelProperty
+// @Tags CarModelProperties
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Param Request body dto.UpdateCarModelPropertyRequest true "Update a CarModelProperty"
+// @Success 200 {object} dto.CarModelPropertyResponse "CarModelProperty response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-properties/{id} [put]
+// @Security AuthBearer
+func (h *CarModelPropertyHandler) Update(c *gin.Context) {
+	Update(c, h.service.Update)
+}
+
+//Deleted
+
+// DeleteCarModelProperty godoc
+// @Summary Delete a CarModelProperty
+// @Description Delete a CarModelProperty
+// @Tags CarModelProperties
+// @Accept json
+// @Produce json
+// @Param id path int true "id"
+// @Success 200 {object} helper.BaseHttpResponse "Deleted successfully"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-properties/{id} [delete]
+// @Security AuthBearer
+func (h *CarModelPropertyHandler) Delete(c *gin.Context) {
+	Delete(c, h.service.Delete)
+}
+
+//get
+
+// GetCarModelProperty godoc
+// @Summary Get a CarModelProperty
+// @Description Get a CarModelProperty
+// @Tags CarModelProperties
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Success 200 {object} dto.CarModelPropertyResponse "CarModelProperty response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-properties/{id} [get]
+// @Security AuthBearer
+func (h *CarModelPropertyHandler) GetById(c *gin.Context) {
+	GetById(c, h.service.GetById)
+}
+
+// GetCarModelPropertys godoc
+// @Summary Filter Countries by pagination & criteria
+// @Description Returns paginated list of countries based on filters
+// @Tags CarModelProperties
+// @Accept json
+// @Produce json
+// @Param Request body  dto.PaginationInputWithFilter true "Request"
+// @Success 200 {object} helper.BaseHttpResponse "CarModelProperty response"
+// @Failure 400 {object} helper.BaseHttpResponse "Bad Request"
+// @Router /car-model-properties/get-by-filter [post]
+// @Security AuthBearer
+func (h *CarModelPropertyHandler) GetByFilter(c *gin.Context) {
+	GetByFilter(c, h.service.GetByFilter)
+}
