# src/services/car_model_property_service.go
@@ -1,0 +1,51 @@
+package services
+
+
+import (
+	"GOLANG_CLEAN_WEB_API/src/api/dto"
+	"GOLANG_CLEAN_WEB_API/src/config"
+	"GOLANG_CLEAN_WEB_API/src/data/db"
+	"GOLANG_CLEAN_WEB_API/src/data/models"
+	"GOLANG_CLEAN_WEB_API/src/pkg/logging"
+	"context"
+)
+
+type CarModelPropertyService struct {
+	base *BaseService[models.CarModelProperty, dto.CreateCarModelPropertyRequest, dto.UpdateCarModelPropertyRequest, dto.CarModelPropertyResponse]
+}
+
+func NewCarModelPropertyService(cfg *config.Config) *CarModelPropertyService {
+	return &CarModelPropertyService{
+		base: &BaseService[models.CarModelProperty, dto.CreateCarModelPropertyRequest, dto.UpdateCarModelPropertyRequest, dto.CarModelPropertyResponse]{
+			Database: db.GetDb(),
+			Logger:   logging.NewLogger(cfg),
+			Preload: []preload{
+				{string: "Property.Category"},
+			},
+		},
+	}
+
+}
+
+func (s *CarModelPropertyService) Create(ctx context.Context, req *dto.CreateCarModelPropertyRequest) (*dto.CarModelPropertyResponse, error) {
+	return s.base.Create(ctx, req)
+
+}
+
+func (s *CarModelPropertyService) Update(ctx context.Context, id int, req *dto.UpdateCarModelPropertyRequest) (*dto.CarModelPropertyResponse, error) {
+	return s.base.Update(ctx, req, id)
+
+}
+
+func (s *CarModelPropertyService) Delete(ctx context.Context, id int) error {
+	return s.base.Delete(ctx, id)
+
+}
+
+func (s *CarModelPropertyService) GetById(ctx context.Context, id int) (*dto.CarModelPropertyResponse, error) {
+	return s.base.GetById(ctx, id)
+}
+func (s *CarModelPropertyService) GetByFilter(ctx context.Context, req *dto.PaginationInputWithFilter) (*dto.PagedList[dto.CarModelPropertyResponse], error) {
+
+	return s.base.GetByFilter(ctx, req)
+}
